--- a/FrontEnd/src/components/styles/AdminDashboard.css
+++ b/FrontEnd/src/components/styles/AdminDashboard.css
@@ -156,3 +156,18 @@ table tbody tr:hover {
 .btn-delete:hover {
   background-color: #c0392b;
 }
+
+.btn-view-results {
+  padding: 0.5rem 1rem;
+  margin-right: 0.5rem;
+  border: none;
+  border-radius: 4px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.3s;
+  font-size: 0.9rem;
+  text-decoration: none;
+  display: inline-block;
+  background-color: #f09e07;
+  color: white;
+}
