--- a/FrontEnd/src/components/styles/Dashboard.css
+++ b/FrontEnd/src/components/styles/Dashboard.css
@@ -70,3 +70,19 @@
 .btn-start:hover {
   background-color: #229954;
 }
+
+
+.btn-disabled {
+  background-color: #95a5a6;
+  cursor: not-allowed;
+  opacity: 0.7;
+   display: inline-block;
+  width: 100%;
+  padding: 0.75rem;
+  color: white;
+  text-decoration: none;
+  border-radius: 4px;
+  text-align: center;
+  font-weight: 600;
+  transition: background-color 0.3s;
+}
